--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -2488,63 +2488,69 @@
         </p>
     </section>
 
-    <!-- Footer -->
-    <footer>
-        <div class="footer-content">
-            <div class="footer-brand">
-                <img src="https://4591743.fs1.hubspotusercontent-na1.net/hubfs/4591743/Black.png" alt="joe" style="filter: brightness(0) invert(1);">
-                <p>Rewriting the story of commerce — pouring prosperity back into the hands of the people.</p>
+    <!-- Footer - Matching Homepage Style -->
+    <footer style="background: #F5F1E8; color: #171717; padding: 4rem 3rem 2rem;">
+        <div style="max-width: 1100px; margin: 0 auto; display: grid; grid-template-columns: 2fr 1fr 1fr 1fr; gap: 3rem;">
+            <div>
+                <img src="https://4591743.fs1.hubspotusercontent-na1.net/hubfs/4591743/Black.png" alt="joe" style="height: 24px; margin-bottom: 1rem;">
+                <p style="font-size: 0.85rem; line-height: 1.6; color: #525252; margin-bottom: 1rem;">The #1 app for indie coffee lovers. Skip the line, earn rewards, support local.</p>
+                <a href="https://www.instagram.com/joe_is_community/" target="_blank" style="display: inline-flex; align-items: center; gap: 0.5rem; color: #525252; text-decoration: none; font-size: 0.85rem;">
+                    <svg style="width: 18px; height: 18px;" fill="currentColor" viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/></svg>
+                    @joe_is_community
+                </a>
             </div>
-            <div class="footer-column">
-                <h4>For Shops</h4>
-                <ul>
-                    <li><a href="/for-coffee-shops/#platform">Platform</a></li>
-                    <li><a href="/for-coffee-shops/#loyalty">Loyalty Program</a></li>
-                    <li><a href="/for-coffee-shops/#pricing">Pricing</a></li>
-                    <li><a href="/for-coffee-shops/#join">Join the Movement</a></li>
+            <div>
+                <h4 style="font-weight: 700; margin-bottom: 1rem; color: #171717;">For Coffee Lovers</h4>
+                <ul style="list-style: none; padding: 0; margin: 0;">
+                    <li style="margin-bottom: 0.5rem;"><a href="https://apps.apple.com/us/app/joe-coffee-order-ahead/id1437558382" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Download App</a></li>
+                    <li style="margin-bottom: 0.5rem;"><a href="/locations/" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Find Shops</a></li>
+                    <li style="margin-bottom: 0.5rem;"><a href="#loyalty" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Rewards</a></li>
+                    <li style="margin-bottom: 0.5rem;"><a href="#" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Gift Cards</a></li>
                 </ul>
             </div>
-            <div class="footer-column">
-                <h4>Resources</h4>
-                <ul>
-                    <li><a href="/blog/">Industry Blog</a></li>
-                    <li><a href="https://support.joe.coffee" target="_blank">Support & FAQs</a></li>
-                    <li><a href="https://manage.joe.coffee/login" target="_blank">Owner Login</a></li>
+            <div>
+                <h4 style="font-weight: 700; margin-bottom: 1rem; color: #171717;">For Coffee Shops</h4>
+                <ul style="list-style: none; padding: 0; margin: 0;">
+                    <li style="margin-bottom: 0.5rem;"><a href="#join" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Join the Collective</a></li>
+                    <li style="margin-bottom: 0.5rem;"><a href="#platform" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Platform</a></li>
+                    <li style="margin-bottom: 0.5rem;"><a href="#pricing" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Pricing</a></li>
+                    <li style="margin-bottom: 0.5rem;"><a href="https://support.joe.coffee" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Support</a></li>
                 </ul>
             </div>
-            <div class="footer-column">
-                <h4>Company</h4>
-                <ul>
-                    <li><a href="/for-coffee-shops/#about">Mission & Values</a></li>
-                    <li><a href="/merchant-terms/">Merchant Terms</a></li>
-                    <li><a href="/privacy/">Privacy Policy</a></li>
-                    <li><a href="/terms/">Terms of Service</a></li>
+            <div>
+                <h4 style="font-weight: 700; margin-bottom: 1rem; color: #171717;">Company</h4>
+                <ul style="list-style: none; padding: 0; margin: 0;">
+                    <li style="margin-bottom: 0.5rem;"><a href="#about" style="color: #525252; text-decoration: none; font-size: 0.85rem;">About</a></li>
+                    <li style="margin-bottom: 0.5rem;"><a href="/blog/" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Blog</a></li>
+                    <li style="margin-bottom: 0.5rem;"><a href="/privacy/" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Privacy</a></li>
+                    <li style="margin-bottom: 0.5rem;"><a href="/terms/" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Terms</a></li>
                 </ul>
             </div>
         </div>
-        <div class="footer-cities">
-            <h4>Coffee Shops by City</h4>
-            <div class="footer-cities-grid">
-                <a href="/locations/wa/seattle/">Coffee Shops in Seattle</a>
-                <a href="/locations/wa/spokane/">Coffee Shops in Spokane</a>
-                <a href="/locations/il/chicago/">Coffee Shops in Chicago</a>
-                <a href="/locations/wa/tacoma/">Coffee Shops in Tacoma</a>
-                <a href="/locations/or/portland/">Coffee Shops in Portland</a>
-                <a href="/locations/ca/los-angeles/">Coffee Shops in Los Angeles</a>
-                <a href="/locations/wa/puyallup/">Coffee Shops in Puyallup</a>
-                <a href="/locations/tx/san-antonio/">Coffee Shops in San Antonio</a>
-                <a href="/locations/wa/spokane-valley/">Coffee Shops in Spokane Valley</a>
-                <a href="/locations/id/coeur-dalene/">Coffee Shops in Coeur d'Alene</a>
-                <a href="/locations/wa/everett/">Coffee Shops in Everett</a>
-                <a href="/locations/wa/centralia/">Coffee Shops in Centralia</a>
+        <div style="max-width: 1100px; margin: 2rem auto 0; padding-top: 2rem; border-top: 1px solid #E5E5E5;">
+            <h4 style="font-weight: 700; margin-bottom: 1rem; color: #171717; font-size: 0.85rem; text-transform: uppercase; letter-spacing: 0.05em;">Coffee Shops by City</h4>
+            <div style="display: grid; grid-template-columns: repeat(6, 1fr); gap: 0.5rem 1rem; margin-bottom: 1rem;">
+                <a href="/locations/wa/seattle/" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Seattle</a>
+                <a href="/locations/wa/spokane/" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Spokane</a>
+                <a href="/locations/il/chicago/" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Chicago</a>
+                <a href="/locations/wa/tacoma/" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Tacoma</a>
+                <a href="/locations/or/portland/" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Portland</a>
+                <a href="/locations/ca/los-angeles/" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Los Angeles</a>
+                <a href="/locations/wa/puyallup/" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Puyallup</a>
+                <a href="/locations/tx/san-antonio/" style="color: #525252; text-decoration: none; font-size: 0.85rem;">San Antonio</a>
+                <a href="/locations/wa/spokane-valley/" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Spokane Valley</a>
+                <a href="/locations/id/coeur-dalene/" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Coeur d'Alene</a>
+                <a href="/locations/wa/everett/" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Everett</a>
+                <a href="/locations/wa/centralia/" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Centralia</a>
             </div>
-            <a href="/locations/" class="footer-view-all">View All Locations →</a>
+            <a href="/locations/" style="color: #171717; font-weight: 600; text-decoration: none; font-size: 0.85rem;">View All Locations →</a>
         </div>
-        <div class="footer-bottom">
-            © 2025 joe Coffee. All rights reserved. | Crafted with ❤️ for indie coffee
+        <div style="max-width: 1100px; margin: 2rem auto 0; padding-top: 1.5rem; border-top: 1px solid #E5E5E5; display: flex; justify-content: space-between; align-items: center; font-size: 0.8rem; color: #737373;">
+            <p>© 2025 joe Coffee. All rights reserved.</p>
+            <p>Crafted with ❤️ for indie coffee</p>
         </div>
     </footer>
-
+    
     <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
         // Mobile menu functionality
         const mobileMenuBtn = document.getElementById('mobileMenuBtn');
